styles/layout.scss
body {
  background-color: white;
  h1 {
    color: #244751;
  }
}

#nav-bar {
  height: 120px;
  width: 100%;
  top: 0;
  background-color: #b3d1ff;
  color: #e8fdff;
  padding: 0 2em;
}

@media (min-width: 1000px) {
  #map {
  height: 800px;
  width: 800px;
  padding: 0;
  display: block;
  margin: 0 auto;
  margin-top: 100px;
  border-radius: 10px;
  }
}

@media (max-width: 999px) {
  #map {
  height: 600px;
  width: 600px;
  padding: 0;
  display: block;
  margin: 0 auto;
  margin-top: 200px;
  border-radius: 10px;
  }
}

@media (max-width: 700px) {
  #map {
  height: 300px;
  width: 300px;
  padding: 0;
  display: block;
  margin: 0 auto;
  margin-top: 200px;
  border-radius: 10px;
  }
}

.lists {
  display: none;
  margin-left: 40%;
}

.btn {
  position: absolute;
  float: left;
  margin-top: 10%;
  margin-left: 20%;
}

.locationInputs {
  display: none;
  position: static;
  margin-top: -400px;
  border: 3px solid rgb(218,26,46);
  border-radius: 10px;
  float: left;
  width: 25%;
  padding: 10px;
  margin-left: 5%;
}

select {
  margin-top: 20px;
  margin-bottom: 20px;
}

input {
  margin-top:20px;
}

img {
  position: absolute;
  float: right;
  margin-left: 71%;
  margin-top: 20%;
  width:115px;
  height:115px;
  z-index: 9999;
  cursor: pointer;
}

img:active {
  transition: 2em;
  opacity: 0.8;
  width:112px;
  height:112px;
}

